final year proj

--- a/asert/admin/css/forms.css
+++ b/asert/admin/css/forms.css
@@ -398,7 +398,7 @@ body.popup .submit-row {
     border-bottom: 1px solid #eee;
 }
 
-.inline-related h3 span.delete {
+.inline-related h3 span. {
     float: right;
 }
 
