--- a/templates/dashboard/customer_index.html
+++ b/templates/dashboard/customer_index.html
@@ -18,7 +18,7 @@
         <div class="col-md-8">
             <div class="card">
                 <div class="card-header">
-                    Orders Records
+                    Resource Requirement
                 </div>
                 <div class="card-body">
                     <table class="table bg-white">
