--- a/templates/dashboard/products.html
+++ b/templates/dashboard/products.html
@@ -14,7 +14,7 @@
         {% endfor %}
         {% endif %}
         <div class="card card-body">
-            <h5>Add New Products</h5>
+            <h5>Add Available Resources</h5>
             <hr>
             <form method="POST">
                 {% csrf_token %}
