--- a/templates/partials/topside.html
+++ b/templates/partials/topside.html
@@ -6,7 +6,7 @@
             </div>
             <div class="card-body">
                 <marquee behavior="" direction="">
-                    <h3 class="my-4">New Information</h3>
+                    <h3 class="my-4">Keep Calm Stay Safe</h3>
                 </marquee>
             </div>
         </div>
@@ -19,10 +19,10 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-4">
-                        <a class="text-decoration-none text-dark" href="{% url 'dashboard-customers' %}">
+                        <a class="text-decoration-none text-dark" href="{% url 'dashboard-products' %}">
                             <div class="card my-card shadow">
                                 <div class="card-body text-center">
-                                    <h4>Staff <i class="fas fa-users"></i></h4>
+                                    <h4>Hostages <i class="fas fa-users"></i></h4>
                                     <h3>{{ customer_count }}</h3>
                                 </div>
                             </div>
@@ -32,7 +32,7 @@
                         <a class="text-decoration-none text-dark" href="{% url 'dashboard-products' %}">
                             <div class="card my-card shadow">
                                 <div class="card-body text-center">
-                                    <h4>Products <i class="fas fa-box"></i></h4>
+                                    <h4>Resources <i class="fas fa-box"></i></h4>
                                     <h3>{{ product_count }}</h3>
                                 </div>
                             </div>
