--- a/templates/dashboard/customers_detail.html
+++ b/templates/dashboard/customers_detail.html
@@ -23,25 +23,25 @@
                         <tbody>
                             <tr>
                                 <th>Name</th>
-                                <td>{{ customers.username }}</td>
+                                <td>{{ customer.username }}</td>
                             </tr>
                             <tr>
                                 <th>Email</th>
-                                <td>{{ customers.email }}</td>
+                                <td>{{ customer.email }}</td>
                             </tr>
                             <tr>
                                 <th>Phone</th>
-                                <td>{{ customers.profile.phone }}</td>
+                                <td>{{ customer.profile.phone }}</td>
                             </tr>
                             <tr>
                                 <th>Address</th>
-                                <td>{{ customers.profile.address }}</td>
+                                <td>{{ customer.profile.address }}</td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
                 <div class="col-md-4">
-                    <img class="img-thumbnail" src="{{ customers.profile.image.url }}" alt="profile-image">
+                    <img class="img-thumbnail" src="{{ customer.profile.image.url }}" alt="profile-image">
                 </div>
             </div>
         </div>
